# librevenge

./: .gitmodules  CMakeLists.txt
include/librevenge/: RVNGSVGDrawingGenerator.h
librevenge/: RVNGDirectoryStream.cpp
src/: CMakeLists.txt
src/libcdr/: CDRCollector.cpp  CDRCollector.h  CDRContentCollector.cpp  CDRParser.cpp  libcdr_utils.cpp  libcdr_utils.h
src/librevenge/: RVNGSVGDrawingGenerator.cpp
