__files_group(${CMAKE_CURRENT_SOURCE_DIR}/librevenge/ SRCS)
__files_group(${CMAKE_CURRENT_SOURCE_DIR}/libcdr/ CDRSRCS)
__files_group(${CMAKE_CURRENT_SOURCE_DIR}/include/ INCSRCS)

set(LIBS zlib)
set(DEFS _CRT_SECURE_NO_WARNINGS DLL_EXPORT LIBCDR_BUILD LIBREVENGE_BUILD LIBREVENGE_STREAM_BUILD LIBREVENGE_GENERATORS_BUILD)
set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/include/ 
		 ${CMAKE_CURRENT_SOURCE_DIR}
		 ${boost_INCLUDE_DIR})

__add_real_target(librevenge dll SOURCE ${SRCS} ${INCSRCS} ${CDRSRCS} INC ${INCS} LIB ${LIBS} DEF ${DEFS})

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include/librevenge/ FILES_MATCHING PATTERN "*.h")
set_property(TARGET librevenge PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include/)