__assert_target(zlib)
if(NOT BOOST_INCLUDE_DIRS)
	message(FATAL_ERROR "Please Specify BOOST_INCLUDE_DIRS")
endif()

__files_group(${CMAKE_CURRENT_SOURCE_DIR}/librevenge/ SRCS)
__files_group(${CMAKE_CURRENT_SOURCE_DIR}/libcdr/ CDRSRCS)
__files_group(${CMAKE_CURRENT_SOURCE_DIR}/include/ INCSRCS)

set(LIBS zlib)
set(DEFS _CRT_SECURE_NO_WARNINGS Z_PREFIX)
if(WIN32)
	list(APPEND DEFS DLL_EXPORT LIBCDR_BUILD LIBREVENGE_BUILD LIBREVENGE_STREAM_BUILD LIBREVENGE_GENERATORS_BUILD)
else()
	list(APPEND DEFS LIBCDR_VISIBILITY LIBREVENGE_VISIBILITY LIBREVENGE_STREAM_VISIBILITY LIBREVENGE_GENERATORS_VISIBILITY)
endif()

set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/include/ 
		 ${CMAKE_CURRENT_SOURCE_DIR}
		 ${BOOST_INCLUDE_DIRS})

__add_real_target(librevenge dll SOURCE ${SRCS} ${INCSRCS} ${CDRSRCS} INC ${INCS} LIB ${LIBS} DEF ${DEFS}
			INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)

if(CC_INSTALL_LIBREVENGE)
	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include/librevenge/ FILES_MATCHING PATTERN "*.h")
endif()
